# dummit

./: .gitignore  README.md  demo.py  do_images.sh  dummit.py  dummit_df_tests.py  dummit_factories.py  dummit_inputs.py  dummit_tests.py  pipy.md  run_demo.sh  sample_test_library.yaml  setup.cfg
demos/: less_bloated_sample_test_library.yaml  products.csv  sample_azure_blobs_config.yaml  sample_local_files_config.yaml  sample_test_library.yaml
demos/daily/20211002/: sales.csv
demos/daily/20211003/: sales.csv
docs/: df_tests.md  inputs.md  locations.md  tests.md
dummit/: __init__.py  dummit.py  dummit_df_tests.py  dummit_factories.py  dummit_inputs.py  dummit_locations.py  dummit_secrets.py  dummit_tests.py
