[metadata]
name = dummit
version = 0.0.1
author = Pan Piotrek
author_email = piotr@grnd.pl
description = a Dummy Input Tests package for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Piotr12/dummit
project_urls =
    Bug Tracker = https://github.com/Piotr12/dummit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = dummit
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dummit