[metadata]
name = dummit
version = 0.0.4
author = Pan Piotrek
description = Dummy Input Tests: data quality checks
long_description = file: pypi.md
long_description_content_type = text/markdown
url = https://github.com/Piotr12/dummit
project_urls =
    Bug Tracker = https://github.com/Piotr12/dummit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
